test/TestSuite/Syntax/Errors/chargeset_master.tjp
project test "Test" "1.0" 2007-11-16 +2m 

account group1 "Group1" {
  account g1 "G1"
  account g2 "G2"
  account g3 "G3"
}

task t "T" {
  start ${projectstart}
	chargeset g1, g2
# MARK: error 13 chargeset_master
  chargeset g3
}

